Added tokenization for summary and re-evaluated different models. Also added XGboost

--- a/src/data_processing/preprocess_data.ipynb
+++ b/src/data_processing/preprocess_data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,45 +42,12 @@
     "    df[i] = d\n",
     "  return pd.DataFrame.from_dict(df, orient='index')\n",
     "\n",
-    "df = getDF('/Users/kingnutmegs/Documents/GitHub/NLP-Amazon-Review-Sentiment-Analysis/data/raw/AMAZON_FASHION.json.gz')"
+    "df = getDF('../../data/raw/AMAZON_FASHION.json.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "overall                0\n",
-       "verified               0\n",
-       "reviewTime             0\n",
-       "reviewerID             0\n",
-       "asin                   0\n",
-       "reviewerName          92\n",
-       "reviewText          1233\n",
-       "summary              533\n",
-       "unixReviewTime         0\n",
-       "vote              803736\n",
-       "style             579067\n",
-       "image             854829\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check for missing values and fill in missing values with empty strings\n",
-    "df.isnull().sum()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +127,7 @@
        "4                                        Three Stars      3.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +205,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -266,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +250,7 @@
        "Name: reviewTextLength, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +290,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -401,6 +368,7 @@
        "      <th>overall</th>\n",
        "      <th>reviewTextLength</th>\n",
        "      <th>reviewTokens</th>\n",
+       "      <th>summaryTokens</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -411,6 +379,7 @@
        "      <td>5.0</td>\n",
        "      <td>22</td>\n",
        "      <td>[exactli, need, .]</td>\n",
+       "      <td>[perfect, replac, !, !]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -419,6 +388,7 @@
        "      <td>2.0</td>\n",
        "      <td>239</td>\n",
        "      <td>[agre, review, ,, open, small, ., almost, bent...</td>\n",
+       "      <td>[agre, review, ,, open, ...]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -427,6 +397,7 @@
        "      <td>4.0</td>\n",
        "      <td>244</td>\n",
        "      <td>[love, ..., go, order, anoth, pack, keep, work...</td>\n",
+       "      <td>[new, 'friend, ', !, !]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -435,6 +406,7 @@
        "      <td>2.0</td>\n",
        "      <td>19</td>\n",
        "      <td>[tini, open]</td>\n",
+       "      <td>[two, star]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -443,6 +415,7 @@
        "      <td>3.0</td>\n",
        "      <td>4</td>\n",
        "      <td>[okay]</td>\n",
+       "      <td>[three, star]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -463,15 +436,22 @@
        "3                                          Two Stars      2.0   \n",
        "4                                        Three Stars      3.0   \n",
        "\n",
-       "   reviewTextLength                                       reviewTokens  \n",
-       "0                22                                 [exactli, need, .]  \n",
-       "1               239  [agre, review, ,, open, small, ., almost, bent...  \n",
-       "2               244  [love, ..., go, order, anoth, pack, keep, work...  \n",
-       "3                19                                       [tini, open]  \n",
-       "4                 4                                             [okay]  "
+       "   reviewTextLength                                       reviewTokens  \\\n",
+       "0                22                                 [exactli, need, .]   \n",
+       "1               239  [agre, review, ,, open, small, ., almost, bent...   \n",
+       "2               244  [love, ..., go, order, anoth, pack, keep, work...   \n",
+       "3                19                                       [tini, open]   \n",
+       "4                 4                                             [okay]   \n",
+       "\n",
+       "                  summaryTokens  \n",
+       "0       [perfect, replac, !, !]  \n",
+       "1  [agre, review, ,, open, ...]  \n",
+       "2       [new, 'friend, ', !, !]  \n",
+       "3                   [two, star]  \n",
+       "4                 [three, star]  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,23 +481,25 @@
     "\n",
     "# Apply tokenization, stemming, and lemmatization to each review text\n",
     "df['reviewTokens'] = df.apply(lambda row: tokenize_stem_lemmatize_review(row['reviewText'], stopwords), axis=1)\n",
+    "df['summaryTokens'] = df.apply(lambda row: tokenize_stem_lemmatize_review(row['summary'], stopwords), axis=1)\n",
     "\n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check for NaN values in each column and replace them\n",
-    "df['reviewText'].fillna('', inplace=True)"
+    "df['reviewText'].fillna('', inplace=True)\n",
+    "df['summary'].fillna('',inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -530,6 +512,7 @@
       "overall             False\n",
       "reviewTextLength    False\n",
       "reviewTokens        False\n",
+      "summaryTokens       False\n",
       "dtype: bool\n"
      ]
     }
@@ -542,21 +525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns with NaN values:\n",
-      "Unnamed: 0          False\n",
-      "reviewText           True\n",
-      "summary              True\n",
-      "overall             False\n",
-      "reviewTextLength    False\n",
-      "reviewTokens        False\n",
-      "dtype: bool\n",
       "CSV file saved as '../../data/processed/tokenized_data.csv'\n"
      ]
     }
@@ -573,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -581,13 +556,13 @@
      "output_type": "stream",
      "text": [
       "Columns with NaN values:\n",
-      "Unnamed: 0.1        False\n",
       "Unnamed: 0          False\n",
       "reviewText           True\n",
       "summary              True\n",
       "overall             False\n",
       "reviewTextLength    False\n",
       "reviewTokens        False\n",
+      "summaryTokens       False\n",
       "dtype: bool\n"
      ]
     }
@@ -595,6 +570,8 @@
    "source": [
     "df_new = pd.read_csv('../../data/processed/tokenized_data.csv')\n",
     "nan_columns = df_new.isna().any()\n",
+    "\n",
+    "# TODO: For some reason saving the NaN values even though there are none present before saving\n",
     "print(\"Columns with NaN values:\")\n",
     "print(nan_columns)"
    ]
@@ -608,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,13 +593,12 @@
     "from nltk.tokenize import word_tokenize\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../../data/processed/tokenized_data.csv')\n",
     "\n",
     "df['reviewText'].fillna('', inplace=True)\n",
-    "df['summary'].fillna('', inplace=True)\n",
+    "df['summary'].fillna('',inplace=True)\n",
     "\n",
-    "# Assuming 'reviewTokens' contains tokenized text for each row\n",
-    "tokenized_data = df['reviewTokens'].apply(eval)  # Convert string representation of list to list\n",
+    "# Concatenate 'reviewTokens' and 'summaryTokens' for each row into single feature\n",
+    "tokenized_data = [row['reviewTokens'] + row['summaryTokens'] for _, row in df.iterrows()]\n",
     "\n",
     "# Tag the documents\n",
     "tagged_data = [TaggedDocument(words=doc, tags=[str(i)]) for i, doc in enumerate(tokenized_data)]\n",
@@ -656,7 +632,7 @@
     "vectorized_features_array = np.array(vectorized_features)\n",
     "\n",
     "# Save the NumPy array\n",
-    "np.save('vectorized_features.npy', vectorized_features_array)\n"
+    "np.save('../../data/processed/vectorized_features_with_summary_tokens.npy', vectorized_features_array)\n"
    ]
   },
   {
