--- a/src/model/logistic_regression/logistic_regression.ipynb
+++ b/src/model/logistic_regression/logistic_regression.ipynb
@@ -21,10 +21,10 @@
     "from sklearn.metrics import classification_report\n",
     "\n",
     "# Load your CSV data into a pandas DataFrame\n",
-    "df = pd.read_csv('../../data/processed/tokenized_data.csv')\n",
+    "df = pd.read_csv('../../../data/processed/tokenized_data.csv')\n",
     "\n",
     "# Load the vectorized features from the .npy file\n",
-    "vectorized_features = np.load('../../data/processed/vectorized_features.npy')\n",
+    "vectorized_features = np.load('../../../data/processed/vectorized_features_with_summary_tokens.npy')\n",
     "\n",
     "feature_vectors = pd.DataFrame(vectorized_features)\n",
     "\n",
@@ -67,15 +67,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         1.0       0.49      0.40      0.44     20917\n",
-      "         2.0       0.20      0.00      0.00     12765\n",
-      "         3.0       0.30      0.09      0.13     19019\n",
-      "         4.0       0.37      0.07      0.12     28682\n",
-      "         5.0       0.60      0.96      0.74     88965\n",
+      "         1.0       0.52      0.49      0.50     20917\n",
+      "         2.0       0.25      0.01      0.02     12765\n",
+      "         3.0       0.37      0.21      0.27     19019\n",
+      "         4.0       0.41      0.19      0.26     28682\n",
+      "         5.0       0.65      0.93      0.77     88965\n",
       "\n",
-      "    accuracy                           0.57    170348\n",
-      "   macro avg       0.39      0.30      0.29    170348\n",
-      "weighted avg       0.48      0.57      0.48    170348\n",
+      "    accuracy                           0.60    170348\n",
+      "   macro avg       0.44      0.37      0.36    170348\n",
+      "weighted avg       0.53      0.60      0.54    170348\n",
       "\n"
      ]
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.4910536079085167\n"
+      "Accuracy: 0.5918061849860285\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,15 +187,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         1.0       0.38      0.53      0.44     20917\n",
-      "         2.0       0.19      0.18      0.19     12765\n",
-      "         3.0       0.22      0.23      0.23     19019\n",
-      "         4.0       0.27      0.28      0.27     28682\n",
-      "         5.0       0.73      0.65      0.69     88965\n",
+      "         1.0       0.50      0.58      0.54     20917\n",
+      "         2.0       0.27      0.30      0.29     12765\n",
+      "         3.0       0.36      0.37      0.37     19019\n",
+      "         4.0       0.40      0.49      0.44     28682\n",
+      "         5.0       0.82      0.72      0.77     88965\n",
       "\n",
-      "    accuracy                           0.49    170348\n",
-      "   macro avg       0.36      0.37      0.36    170348\n",
-      "weighted avg       0.51      0.49      0.50    170348\n",
+      "    accuracy                           0.59    170348\n",
+      "   macro avg       0.47      0.49      0.48    170348\n",
+      "weighted avg       0.62      0.59      0.60    170348\n",
       "\n"
      ]
     }
@@ -280,24 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kingnutmegs/Documents/GitHub/NLP-Amazon-Review-Sentiment-Analysis/venv/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
@@ -319,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -328,15 +313,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         1.0       0.37      0.54      0.44     20917\n",
-      "         2.0       0.18      0.19      0.19     12765\n",
-      "         3.0       0.22      0.23      0.23     19019\n",
-      "         4.0       0.27      0.27      0.27     28682\n",
-      "         5.0       0.74      0.64      0.69     88965\n",
+      "         1.0       0.49      0.59      0.53     20917\n",
+      "         2.0       0.28      0.31      0.29     12765\n",
+      "         3.0       0.37      0.38      0.37     19019\n",
+      "         4.0       0.41      0.49      0.45     28682\n",
+      "         5.0       0.83      0.71      0.77     88965\n",
       "\n",
-      "    accuracy                           0.49    170348\n",
-      "   macro avg       0.36      0.37      0.36    170348\n",
-      "weighted avg       0.51      0.49      0.50    170348\n",
+      "    accuracy                           0.59    170348\n",
+      "   macro avg       0.47      0.50      0.48    170348\n",
+      "weighted avg       0.62      0.59      0.60    170348\n",
       "\n"
      ]
     }
