Cleaned up part 2 of last commit

--- a/src/data_processing/preprocess_data_without_stopwords.ipynb
+++ b/src/data_processing/preprocess_data_without_stopwords.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Preprocessing"
+    "# Data Preprocessing\n",
+    "\n",
+    "This is the same as the other `preprocess_data` notebook, however, this one attempts to get rid of the stop words that may be good indicators for low-tiered star classification. Being that there is a low accuracy with classifying low-tiered stars, a custom stop-word list can be a potential solution to increasing this accuracy. This notebook produces the vectorization of the tokenized `reviewText` column that is used as input for the different modeling. The vectorization process also utilizes `Word2Vec` (which has not been used previously) and `Doc2Vec` modeling to produce the desired matrices."
    ]
   },
   {
@@ -651,7 +653,6 @@
     "model = Word2Vec(sentences=tokenized_data, vector_size=vec_size, window=window, min_count=min_count, workers=workers)\n",
     "\n",
     "\n",
-    "# Initialize an empty list to store word vectors\n",
     "word_vectors = []\n",
     "\n",
     "# Iterate through each tokenized sentence or document and retrieve word vectors\n",
