--- a/src/data_processing/preprocess_data.ipynb
+++ b/src/data_processing/preprocess_data.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Preprocessing"
+    "# Data Preprocessing\n",
+    "\n",
+    "The code within this notebook is a representation of the original pre-processing steps. This notebook entails using `NLTK`'s default corpus of stopwords as well as utilizing only the `Doc2Vec` model to produce the vectorized matrices as input for the models."
    ]
   },
   {
