cleaned logistic regression and updated requirements.txt

--- a/src/model/logistic_regression/logistic_regression.ipynb
+++ b/src/model/logistic_regression/logistic_regression.ipynb
@@ -45,16 +45,9 @@
     "y_pred = model.predict(X_test)\n",
     "\n",
     "# Save the trained model to a file\n",
-    "with open('logistic_regression_model.pkl', 'wb') as file:\n",
+    "with open('pickle_model/logistic_regression_model.pkl', 'wb') as file:\n",
     "    pickle.dump(model, file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -62,27 +55,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         1.0       0.52      0.49      0.50     20917\n",
-      "         2.0       0.25      0.01      0.02     12765\n",
-      "         3.0       0.37      0.21      0.27     19019\n",
-      "         4.0       0.41      0.19      0.26     28682\n",
-      "         5.0       0.65      0.93      0.77     88965\n",
-      "\n",
-      "    accuracy                           0.60    170348\n",
-      "   macro avg       0.44      0.37      0.36    170348\n",
-      "weighted avg       0.53      0.60      0.54    170348\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the trained logistic regression model from the file\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpickle_model/logistic_regression_model.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m----> 3\u001b[0m     model \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Calculate classification report\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(classification_report(y_test, y_pred))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
      ]
     }
    ],
    "source": [
     "# Load the trained logistic regression model from the file\n",
-    "with open('logistic_regression_model.pkl', 'rb') as file:\n",
+    "with open('pickle_model/logistic_regression_model.pkl', 'rb') as file:\n",
     "    model = pickle.load(file)\n",
     "\n",
     "# Calculate classification report\n",
@@ -118,7 +104,7 @@
     "y_pred4 = model.predict(X_train)\n",
     "\n",
     "# Save the trained model to a file\n",
-    "with open('logistic_regression_model_with_class_weights.pkl', 'wb') as file:\n",
+    "with open('pickle_model/logistic_regression_model_with_class_weights.pkl', 'wb') as file:\n",
     "    pickle.dump(model, file)\n"
    ]
   },
@@ -137,7 +123,7 @@
    ],
    "source": [
     "# Load the trained logistic regression model from the file\n",
-    "with open('logistic_regression_model_with_class_weights.pkl', 'rb') as file:\n",
+    "with open('pickle_model/logistic_regression_model_with_class_weights.pkl', 'rb') as file:\n",
     "    model = pickle.load(file)\n",
     "\n",
     "# Evaluate the model\n",
@@ -172,7 +158,7 @@
     "y_pred2 = model.predict(X_test)\n",
     "\n",
     "# Save the trained model to a file\n",
-    "with open('logistic_regression_model_with_undersampling.pkl', 'wb') as file:\n",
+    "with open('pickle_model/logistic_regression_model_with_undersampling.pkl', 'wb') as file:\n",
     "    pickle.dump(model, file)"
    ]
   },
@@ -202,7 +188,7 @@
    ],
    "source": [
     "# Load the trained logistic regression model from the file\n",
-    "with open('logistic_regression_model_with_undersampling.pkl', 'rb') as file:\n",
+    "with open('pickle_model/logistic_regression_model_with_undersampling.pkl', 'rb') as file:\n",
     "    model = pickle.load(file)\n",
     "\n",
     "print(classification_report(y_test, y_pred2))"
@@ -235,7 +221,7 @@
     "y_pred3 = model.predict(X_test)\n",
     "\n",
     "# Save the trained model to a file\n",
-    "with open('logistic_regression_model_with_oversampling.pkl', 'wb') as file:\n",
+    "with open('pickle_model/logistic_regression_model_with_oversampling.pkl', 'wb') as file:\n",
     "    pickle.dump(model, file)\n"
    ]
   },
@@ -265,7 +251,7 @@
    ],
    "source": [
     "# Load the trained logistic regression model from the file\n",
-    "with open('logistic_regression_model_with_oversampling.pkl', 'rb') as file:\n",
+    "with open('pickle_model/logistic_regression_model_with_oversampling.pkl', 'rb') as file:\n",
     "    model = pickle.load(file)\n",
     "\n",
     "print(classification_report(y_test, y_pred3))"
@@ -298,7 +284,7 @@
     "y_pred = model.predict(X_test)\n",
     "\n",
     "# Save the trained model to a file\n",
-    "with open('logistic_regression_model_with_SMOTE.pkl', 'wb') as file:\n",
+    "with open('pickle_model/logistic_regression_model_with_SMOTE.pkl', 'wb') as file:\n",
     "    pickle.dump(model, file)"
    ]
   },
