Finished cleaning rest of repo (xgboost and random forest)

--- a/src/model/random_forest/random_forest_with_tfidf.ipynb
+++ b/src/model/random_forest/random_forest_with_tfidf.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Save model to pickle file\n",
-    "with open ('rf_tfidf_matrix', 'wb') as f:\n",
+    "with open ('pickle_model/rf_tfidf_matrix', 'wb') as f:\n",
     "    pickle.dump(rf_classifier, f)\n"
    ]
   },
@@ -158,7 +158,7 @@
    "outputs": [],
    "source": [
     "# Save model to pickle file\n",
-    "with open ('rf_tfidf_matrix_reviewOnly.pkl', 'wb') as f:\n",
+    "with open ('pickle_model/rf_tfidf_matrix_reviewOnly.pkl', 'wb') as f:\n",
     "    pickle.dump(rf_classifier_reviewOnly, f)\n"
    ]
   },
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "with open('rf_tfidf_matrix_reviewOnly.pkl', 'rb') as f:\n",
+    "with open('pickle_model/rf_tfidf_matrix_reviewOnly.pkl', 'rb') as f:\n",
     "    model = pickle.load(f)\n",
     "\n",
     "# Get the feature importances\n",
@@ -297,13 +297,6 @@
     "plt.title('Confusion Matrix')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -546,13 +539,6 @@
     "    mse_scores[star] = mse\n",
     "\n",
     "mse_scores"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# We're cooked"
    ]
   },
   {
