Sample, add BOW, begin cleaning up

--- a/src/model/logistic_regression/logistic_regression_with_tfidf.ipynb
+++ b/src/model/logistic_regression/logistic_regression_with_tfidf.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -42,11 +41,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Predict the target variable for the test set\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "# Save the trained model to a file\n",
-    "with open('pickle_model/logistic_regression_model.pkl', 'wb') as file:\n",
-    "    pickle.dump(model, file)"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
@@ -63,6 +58,8 @@
    "outputs": [],
    "source": [
     "from scipy.sparse import load_npz\n",
+    "import pickle\n",
+    "\n",
     "df = pd.read_csv('../../../data/processed/tokenized_data.csv')\n",
     "\n",
     "tfidf_matrix_reviewOnly = load_npz('../../../data/processed/tfidf_matrix_reviewOnly.npz')\n",
@@ -79,11 +76,7 @@
     "lr_classifier_reviewOnly.fit(X_train, y_train)\n",
     "\n",
     "# Predict on the test data\n",
-    "y_pred = lr_classifier_reviewOnly.predict(X_test)\n",
-    "\n",
-    "# Save the trained model to a file\n",
-    "with open('pickle_model/logistic_regression_model_reviewOnly.pkl', 'wb') as file:\n",
-    "    pickle.dump(model, file)"
+    "y_pred = lr_classifier_reviewOnly.predict(X_test)"
    ]
   },
   {
@@ -111,10 +104,6 @@
     }
    ],
    "source": [
-    "# Load the trained logistic regression model from the file\n",
-    "with open('pickle_model/logistic_regression_model_reviewOnly.pkl', 'rb') as file:\n",
-    "    model = pickle.load(file)\n",
-    "\n",
     "# Calculate classification report\n",
     "print(classification_report(y_test, y_pred))"
    ]
@@ -145,11 +134,7 @@
     "model = LogisticRegression(class_weight=class_weights)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred4 = model.predict(X_train)\n",
-    "\n",
-    "# Save the trained model to a file\n",
-    "with open('pickle_model/logistic_regression_model_with_class_weights.pkl', 'wb') as file:\n",
-    "    pickle.dump(model, file)\n"
+    "y_pred4 = model.predict(X_train)\n"
    ]
   },
   {
@@ -166,10 +151,6 @@
     }
    ],
    "source": [
-    "# Load the trained logistic regression model from the file\n",
-    "with open('pickle_model/logistic_regression_model_with_class_weights.pkl', 'rb') as file:\n",
-    "    model = pickle.load(file)\n",
-    "\n",
     "# Evaluate the model\n",
     "print(classification_report(y_))\n",
     "accuracy = model.score(X_test, y_test)\n",
@@ -200,11 +181,7 @@
     "model.fit(X_train_resampled, y_train_resampled)\n",
     "\n",
     "# Predict the target variable for the test set\n",
-    "y_pred2 = model.predict(X_test)\n",
-    "\n",
-    "# Save the trained model to a file\n",
-    "with open('pickle_model/logistic_regression_model_with_undersampling.pkl', 'wb') as file:\n",
-    "    pickle.dump(model, file)"
+    "y_pred2 = model.predict(X_test)"
    ]
   },
   {
@@ -232,10 +209,6 @@
     }
    ],
    "source": [
-    "# Load the trained logistic regression model from the file\n",
-    "with open('pickle_model/logistic_regression_model_with_undersampling.pkl', 'rb') as file:\n",
-    "    model = pickle.load(file)\n",
-    "\n",
     "print(classification_report(y_test, y_pred2))"
    ]
   },
@@ -263,11 +236,7 @@
     "model.fit(X_train_resampled, y_train_resampled)\n",
     "\n",
     "# Predict the target variable for the test set\n",
-    "y_pred3 = model.predict(X_test)\n",
-    "\n",
-    "# Save the trained model to a file\n",
-    "with open('pickle_model/logistic_regression_model_with_oversampling.pkl', 'wb') as file:\n",
-    "    pickle.dump(model, file)\n"
+    "y_pred3 = model.predict(X_test)"
    ]
   },
   {
@@ -295,10 +264,6 @@
     }
    ],
    "source": [
-    "# Load the trained logistic regression model from the file\n",
-    "with open('pickle_model/logistic_regression_model_with_oversampling.pkl', 'rb') as file:\n",
-    "    model = pickle.load(file)\n",
-    "\n",
     "print(classification_report(y_test, y_pred3))"
    ]
   },
@@ -352,11 +317,7 @@
     "model.fit(X_train_resampled, y_train_resampled)\n",
     "\n",
     "# Predict the target variable for the test set\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "# Save the trained model to a file\n",
-    "with open('pickle_model/logistic_regression_model_with_SMOTE.pkl', 'wb') as file:\n",
-    "    pickle.dump(model, file)"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
