--- a/src/model/random_forest/random_forest_with_tfidf.ipynb
+++ b/src/model/random_forest/random_forest_with_tfidf.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -153,17 +152,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save model to pickle file\n",
-    "with open ('pickle_model/rf_tfidf_matrix_reviewOnly.pkl', 'wb') as f:\n",
-    "    pickle.dump(rf_classifier_reviewOnly, f)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [
@@ -179,9 +167,6 @@
     }
    ],
    "source": [
-    "with open('pickle_model/rf_tfidf_matrix_reviewOnly.pkl', 'rb') as f:\n",
-    "    model = pickle.load(f)\n",
-    "\n",
     "# Get the feature importances\n",
     "feature_importances_reviewOnly = rf_classifier_reviewOnly.feature_importances_\n",
     "\n",
@@ -322,11 +307,7 @@
     "rf_model.fit(X_train_resampled, y_train_resampled)\n",
     "\n",
     "# Predict the target variable for the test set\n",
-    "y_pred = rf_model.predict(X_test)\n",
-    "\n",
-    "# Save the trained model to a file\n",
-    "with open('random_forest_model_with_undersampling_reviewOnly.pkl', 'wb') as file:\n",
-    "    pickle.dump(rf_model, file)"
+    "y_pred = rf_model.predict(X_test)"
    ]
   },
   {
