--- a/src/model/svm/svm.ipynb
+++ b/src/model/svm/svm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Naive Bayes"
+    "## SVM"
    ]
   },
   {
@@ -58,16 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "# Save the trained model to a file\n",
-    "with open('../model/naive_bayes/naive_bayes_model.pkl', 'wb') as file:\n",
+    "with open('../model/naive_bayes/svm_model.pkl', 'wb') as file:\n",
     "    pickle.dump(model, file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -86,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
